--- a/style.css
+++ b/style.css
@@ -1,54 +1,4 @@
 @charset "utf-8";
-
-body {
-	background-color: #03013b;
-}
-
-Audio.Audio {
-	position: absolute;
-	left: 635px;
-	bottom: -20px;
-	
-}
-
-img.Title {
-	display:block;
-	margin: 0 auto;
-	margin-top: -10px;
-}
-
-h1.Masterpiece {
-	display: block;
-	text-align: center;
-	font-size: 60px;
-	color: lightgrey;
-}
-
-div.Animation {
-	margin: 0 auto;
-	position: relative;
-	height: 441px;
-	width: 1590px;
-}
-
-img.Posing {
-	position: absolute;
-	right: 0px;
-}
-
-img.Crew {
-	position: absolute;
-	top: 225px;
-	left: 0px;
-
-}
-
-ol.Anime {
-	top: -170px;
-	left: 295px;
-	display: table-cell;
-	position: relative;
-	color: white;
-	font-size: 14pt;
-	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
-}
+/* CSS Document */
+.first {width: 100%; height: auto;  position: absolute; top: 0px; left: 0px; color: white; border: 0px solid blue; background: black;}
+p {font-size: 20px; margin: 0px auto; padding-left: 30px; padding-right: 30px; padding-top: 20px; max-width: 400px; text-align: center;}
