--- a/Website.css
+++ b/Website.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 header {left: 50%; text-align: center; position: fixed; color: blue; z-index: 100}
 body {margin: 0px;}
-.main {width: 50%; min-width: 700px; margin: 0px auto; position: relative; z-index: 1;}
+.main {max-width: 700px; margin: 0px auto; position: relative; z-index: 1;}
 .first {width: 100%; height: auto; position: relative; padding-top: 10px; padding-bottom: 10px; color: white; border: 0px solid blue; background: black;}
 .second {width: 100%; height: auto; position: relative; padding-top: 10px; padding-bottom: 10px; color: black; border: 0px solid blue; background: #FF6E00;}
 p {font-size: 19px; font-family: calibri; margin: 0px auto; padding-left: 30px; padding-right: 30px;max-width: 500px; text-align: center;}
