--- a/Website.css
+++ b/Website.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
-header {left: 50%; text-align: center; position: fixed; color: blue; z-index: 100}
+header {right: 0; left: 0; margin-right: 0 auto; margin-left: 0 auto; text-align: center; position: fixed; color: blue; z-index: 100; background: green;}
+.head {margin-top: 10px; margin-bottom: 10px}
 body {margin: 0px;}
 .main {max-width: 700px; margin: 0px auto; position: relative; z-index: 1;}
 .first {width: 100%; height: auto; position: relative; padding-top: 10px; padding-bottom: 10px; color: white; border: 0px solid blue; background: black;}
