--- a/Website.css
+++ b/Website.css
@@ -1,8 +1,9 @@
+@charset "utf-8";
 /* CSS Document */
 header {right: 0; left: 0; margin-right: 0 auto; margin-left: 0 auto; text-align: center; position: fixed; color: blue; z-index: 100; background: green;}
-.head {margin-top: 10px; margin-bottom: 10px}
+.head {margin-top: 15px; margin-bottom: 15px}
 body {margin: 0px;}
-.main {max-width: 700px; margin: 0px auto; position: relative; z-index: 1;}
+.main {max-width: 900px; margin: 0px auto; position: relative; z-index: 1;}
 .first {width: 100%; height: auto; position: relative; padding-top: 10px; padding-bottom: 10px; color: white; border: 0px solid blue; background: black;}
 .second {width: 100%; height: auto; position: relative; padding-top: 10px; padding-bottom: 10px; color: black; border: 0px solid blue; background: #FF6E00;}
 p {font-size: 19px; font-family: calibri; margin: 0px auto; padding-left: 30px; padding-right: 30px;max-width: 500px; text-align: center;}
